# mobileproject

./: README.md  base.resource  interactive_console_output.xml  pyproject.toml  requirements.txt
log/: log.html  output.xml  report.html
resource/pages/: TED_T_PAGE.robot
resource/utils/: TED.resource
results/: log.html  output.xml  report.html
test/: Tests.robot
