[project]
name = "mobile testing"
version = "0.1.0"
description = "\"Automação mobile com Appium e Robot Framework\""
authors = [
    {name = "Matheus Vasconcelos",email = "mths_moreira@live.com"}
]
license = {text = "1.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
